--- a/ERP Love-Gid/Web.config
+++ b/ERP Love-Gid/Web.config
@@ -69,6 +69,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ERP_x0020_modelContainer" connectionString="metadata=&quot;res://*/ERP model.csdl|res://*/ERP model.ssdl|res://*/ERP model.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ERP_LG;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ERP_x0020_modelContainer" connectionString="metadata=&quot;res://*/ERP model.csdl|res://*/ERP model.ssdl|res://*/ERP model.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ERP_LG;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ERP_LGEntities" connectionString="metadata=res://*/ERPModel.csdl|res://*/ERPModel.ssdl|res://*/ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ERP_LG;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ERPModelContainer" connectionString="metadata=res://*/ERPModel.csdl|res://*/ERPModel.ssdl|res://*/ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ERP_LG;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
