--- a/ERP Love-Gid/ERP Love-Gid.csproj
+++ b/ERP Love-Gid/ERP Love-Gid.csproj
@@ -176,6 +176,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ERPModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ERPModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Event.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
@@ -263,6 +268,7 @@
     <Content Include="Views\Home\MyFinanses.cshtml" />
     <Content Include="Views\Home\AddPaymentDetail.cshtml" />
     <Content Include="Views\Home\AddReceivedMoney.cshtml" />
+    <Content Include="Views\Home\EditContract.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
