--- a/ERP Love-Gid/ERP Love-Gid.csproj
+++ b/ERP Love-Gid/ERP Love-Gid.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Contract.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ControllerFactory.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -277,6 +278,8 @@
     <Content Include="Views\Home\EditPay_min.cshtml" />
     <Content Include="Views\Home\AddMyJobPayment.cshtml" />
     <Content Include="Views\Home\EditPayFromPeer.cshtml" />
+    <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
