--- a/ERP Love-Gid/ERP Love-Gid.csproj
+++ b/ERP Love-Gid/ERP Love-Gid.csproj
@@ -293,6 +293,7 @@
     <Content Include="Views\Admin\Events.cshtml" />
     <Content Include="Views\Admin\Salary.cshtml" />
     <Content Include="Views\Admin\AddEmployee.cshtml" />
+    <Content Include="Views\Admin\EditSalaryItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
